--- a/main.rmd
+++ b/main.rmd
@@ -38,58 +38,83 @@ library(rpart.plot)
 # 1. Descargar los datos/cargar los datos y usar los mismos conjuntos de entrenamiento y prueba  
 Guardaremos train en un objeto llamado data
 ```{r}
-data <- read.csv('./train.csv') # nolint
-nrow(data)
-ncol(data)
-colnames(data)
+library(caret)
+library(rpart)
+library(rpart.plot)
 
-# Crear un nuevo objeto "train_vars" que contenga todas las variables de "train"
-data <- data.frame(data)
-str(data)
-# Verificar el contenido de "train_vars"
-head(data)
+# Cargando datos
+data <- read.csv('./train.csv')
+
+# Separando datos de entrenamiento y prueba
+set.seed(42)
+train_index <- createDataPartition(data$SalePrice, p = 0.7, list = FALSE)
+train_data <- data[train_index, ]
+test_data <- data[-train_index, ]
+
+# Seleccionando variables predictoras y variable objetivo
+predictors <- c("OverallCond")
+response <- "OverallQual"
+
+# Entrenando el modelo de árbol de decisión
+model <- rpart(as.formula(paste(response, "~", paste(predictors, collapse = "+"))), data = train_data, method = "class", control = rpart.control(maxdepth = 4))
+
+# Graficando el árbol de decisión
+rpart.plot(model, type = 4, extra = 101, under = TRUE, main = "Árbol de decisión")
+
+# Haciendo predicciones con los datos de prueba
+predictions <- predict(model, test_data, type = "class")
+
+# Evaluando la precisión del modelo
+confusion_matrix <- table(predictions, test_data[, response])
+accuracy <- sum(diag(confusion_matrix)) / sum(confusion_matrix)
+cat("Resultado de la precision del modelo principal: ", accuracy, "\n")
 ```
 
 # 2. Elabore un árbol de regresión para predecir el precio de las casas usando todas las variables
 ```{r}
-set.seed(123) #seteamos la semilla
-#definimos el porcentaje de prueba
-porciento <- 0.7
-filas_train <- sample(1:nrow(data), nrow(data) * porciento) # nolint
-#definimos testeo y entrenamiento
-train <- data[filas_train, ]
-test <- data[filas_train, ]
-nrow(train)
-nrow(test)
-#Verificar que sena los mismos valores
-summary(train$LandContour)
-table(train$LandContour)
-# imputar por error
-library(Hmisc)
-train_imputed <- impute(train)
-#modelo inicial
-modelo1 <- rpart(SalePrice ~ ., train_imputed, method = "class")
-rpart.plot(modelo1, box.palette = "#3898a9")
+# Seleccionando solo las columnas numéricas
+X <- data[, sapply(data, is.numeric)]
 
-y <- test[, 9]
-test <- test[, -9]
+# Reemplazando los NaN por ceros.
+X[is.na(X)] <- 0
 
-colnames(test)
-ypred <- predict(modelo1, newdata = test)
-ypred <- apply(ypred, 1, function(x) colnames(ypred)[which.max(x)])
-ypred <- factor(ypred)
+# Variable a predecir.
+y <- data$SalePrice
 
-confusionMatrix(ypred, y)
+# Quitando los NaN de y.
+y[is.na(y)] <- 0
 
+# Creando el árbol.
+arbol <- rpart(y ~ ., data=X, method="anova", control=rpart.control(maxdepth=2))
 
-table(train_imputed$SalePrice)
-table(y)
-table(data$SalePrice)
+# Ajustando el árbol.
+
+# Prediciendo los valores.
+score <- summary(arbol)$rsq
+
+print("Precisión:", score)
+
+# Visualizando el árbol.
+rpart.plot(arbol, extra=1)
+
 ```
 
 # 3. Úselo para predecir y analice el resultado. ¿Qué tal lo hizo? 
 ```{r}
+# Prediciendo el precio con el árbol de decisión.
 
+y <- data[,sapply(data, is.numeric)]
+
+# Convirtiendo los NaN a número.
+y[is.na(y)] <- 0
+
+# Prediciendo el precio.
+y_pred <- predict(arbol, newdata = y)
+
+cat("Predicción con 5 de profundidad: ", y_pred, "\n")
+
+#  Imprimiendo el resultado de manera más visible.
+cat("Predicción con 5 de profundidad: ", y_pred[1:10], "\n")
 ```
 # 4. Haga, al menos, 3 modelos más cambiando el parámetro de la profundidad del árbol. ¿Cuál es el mejor modelo para predecir el precio de las casas? 
 ```{r}
