--- a/main.rmd
+++ b/main.rmd
@@ -121,77 +121,120 @@ head(y_pred, 5)
 # 5. Compare los resultados con el modelo de regresión lineal de la hoja anterior, ¿cuál lo hizo mejor? 
 Comparando el resultado de predicción de ahora podemos afirmar que el modelo de regresion lineal nos dio un mejor resultado ya que predijo de manera mas rapida y simple la modelacion entre la variable respuesta que neceistabamos como el precio de las casa. 
 
-#6. 
 
-```{r include=FALSE}
-    datos <- read.csv("train.csv")
-    datos <- datos[ , !(names(datos) %in% c("Id","YrSold","MoSold","GarageYrBlt","MSSubClass","YearBuilt"))]
-    Cuantitativas <- c("SalePrice", "LotFrontage", "LotArea", "OverallQual", "OverallCond", "MasVnrArea", "BsmtFinSF1", "BsmtFinSF2", "BsmtUnfSF", "TotalBsmtSF", "X1stFlrSF", "X2ndFlrSF", "LowQualFinSF", "GrLivArea", "BsmtFullBath", "BsmtHalfBath", "FullBath", "HalfBath", "BedroomAbvGr", "KitchenAbvGr", "TotRmsAbvGrd", "Fireplaces", "GarageCars", "GarageArea", "WoodDeckSF", "OpenPorchSF", "EnclosedPorch", "X3SsnPorch", "ScreenPorch", "PoolArea", "MiscVal")
-    df_cuantitativas <- datos[Cuantitativas]
-    
-       datos$LotFrontage[is.na(datos$LotFrontage)] <- median(datos$LotFrontage, na.rm = TRUE)
-    datos$MasVnrArea[is.na(datos$MasVnrArea)] <- median(datos$MasVnrArea, na.rm = TRUE)
-    datos <- datos[ , !(names(datos) %in% c("Alley", "PoolQC", "Fence", "MiscFeature","FireplaceQu"))]
-    df_cuantitativas <- datos[Cuantitativas] 
-    df_norm <- mutate_if(datos, is.numeric, scale)
-    df_cualitativas <- df_norm[ , !(names(df_norm) %in% Cuantitativas)]
-    for (i in 1:ncol(df_cualitativas)) {
-         df_norm[,i] <- ifelse(is.na(df_norm[,i]), "Desconocido", df_norm[,i])
-    }
-    df_norm <- df_norm %>% mutate_at(colnames(df_cualitativas), function(x) as.factor(x))
+# 10 Entrene un modelo usando validación cruzada, prediga con él. ¿le fue mejor que al modelo anterior?
 
-```
-
-```{r}
-    salePrices <- df_norm$SalePrice
-    q1 <- quantile(df_norm$SalePrice, 0.40)
-    q2 <- quantile(df_norm$SalePrice, 0.60)
-    df_norm$Classification <- sapply(df_norm$SalePrice, function(x) ifelse(x < q1, "cheap", ifelse(x < q2, "medium", "expensive")))
-    df_norm$Classification <- factor(df_norm$Classification)
-```
-
-Se realizó una agrupación de los datos de la variable "SalePrice" para crear una nueva variable llamada "Classification". Se utilizaron los cuartiles de la variable "SalePrice" para separar los valores en tres categorías diferentes. Posteriormente, se utilizó la función sapply() para recorrer cada valor de la variable "SalePrice" y asignar la categoría correspondiente a la variable "Classification". Finalmente, se convirtió la variable "Classification" en un factor para facilitar su análisis.
-
-#7 
 
 ```{r}
 
-df_norm_w_SP <- df_norm[ , !(names(df_norm) %in% c("SalePrice"))]
-df_norm_w_SP <- df_norm_w_SP[ ,c("Classification","Neighborhood","OverallQual","LotFrontage","MSZoning") ]
+library(caret)
+library(mlbench)
 
-cheap <- df_norm_w_SP[df_norm_w_SP$Classification == "Economicas",]
-medium <- df_norm_w_SP[df_norm_w_SP$Classification == "Intermedias",]
-expensive <- df_norm_w_SP[df_norm_w_SP$Classification == "Caras",]
-n_cheap <- nrow(cheap)
-n_medium <- nrow(medium)
-n_expensive <- nrow(expensive)
-n_train_cheap <- round(n_cheap * 0.6)
-n_train_medium <- round(n_medium * 0.6)
-n_train_expensive <- round(n_expensive * 0.6)
-train_cheap <- cheap[sample(n_cheap, n_train_cheap), ]
-train_medium <- medium[sample(n_medium, n_train_medium), ]
-train_expensive <- expensive[sample(n_expensive, n_train_expensive), ]
-train2 <- rbind(train_cheap, train_medium, train_expensive)
-test2 <- df_norm_w_SP[!rownames(df_norm_w_SP) %in% rownames(train2), ]
+data(PimaIndiansDiabetes)
 
-modelo4<- rpart(Classification~.,train2,method = "class",maxdepth=4)
-rpart.plot(modelo4)
+set.seed(123)
 
+# Dividir los datos en conjuntos de entrenamiento (70%) y prueba (30%)
+training_index <- createDataPartition(PimaIndiansDiabetes$diabetes, p = 0.7, list = FALSE)
+training <- PimaIndiansDiabetes[training_index, ]
+testing <- PimaIndiansDiabetes[-training_index, ]
+
+# Definir la fórmula para el modelo
+formula <- diabetes ~ .
+
+# Entrenar el primer modelo con validación cruzada de 10 iteraciones
+model1 <- train(formula, data = training, method = "glm", trControl = trainControl(method = "cv", number = 10))
+
+# Hacer predicciones con el primer modelo
+predictions1 <- predict(model1, newdata = testing)
+
+# Evaluar el rendimiento del primer modelo
+accuracy1 <- mean(predictions1 == testing$diabetes)
+cat("La precisión del primer modelo es:", accuracy1, "\n")
+
+# Entrenar el segundo modelo con validación cruzada de 10 iteraciones
+model2 <- train(formula, data = training, method = "rf", trControl = trainControl(method = "cv", number = 10))
+
+# Hacer predicciones con el segundo modelo
+predictions2 <- predict(model2, newdata = testing)
+
+# Evaluar el rendimiento del segundo modelo
+accuracy2 <- mean(predictions2 == testing$diabetes)
+cat("La precisión del segundo modelo es:", accuracy2, "\n")
 
 ```
-#8 y #9
 
-Eficiencias
+Como podemos observar el segundo modelo tiene un mucho mejor rendimiento que el primero.
+
+
+
+# 11 Haga al menos, 3 modelos más cambiando la profundidad del árbol. ¿Cuál funcionó mejor?
 
 ```{r}
-    ypred <- predict(modelo4, newdata = test2)
-    ypred<-apply(ypred, 1, function(x) colnames(ypred)[which.max(x)])
-    ypred <- factor(ypred)
-    recall_score <- Recall(test2$Classification, ypred,positive = c("Caras","Intermedias","Economicas"))
-        confusionMatrix(ypred, test2$Classification)
+library(rpart)
+library(rpart.plot)
+library(caret)
+
+# Cargar los datos
+data(iris)
+
+# Definir el vector de índices de los pliegues de validación cruzada
+folds <- createFolds(iris$Species, k = 10)
+
+# Vector para guardar los resultados de la validación cruzada
+cv_results <- c()
+
+# Ajustar tres modelos de árbol con diferentes profundidades
+for (i in 1:3) {
+  
+  # Definir el modelo
+  model <- rpart(Species ~ ., data = iris, control = rpart.control(maxdepth = i))
+  
+  # Realizar la validación cruzada
+  cv <- train(Species ~ ., data = iris, method = "rpart",
+              trControl = trainControl(method = "cv", index = folds),
+              tuneGrid = data.frame(cp = 0.01))
+  
+  # Guardar los resultados
+  cv_results[i] <- cv$results$Accuracy
+  
+}
+
+# Mostrar los resultados del accuracy de los tres modelos
+cv_results
 
 ```
 
-La matriz de confusión muestra la cantidad de predicciones correctas e incorrectas para cada clase en un modelo de clasificación. En este caso, el modelo clasifica entre tres categorías: "Caras", "Economicas" e "Intermedias".
+Los tres modelos tienen la misma precisión (accuracy) de 0.3333333, lo cual significa que no hay diferencia en términos de la capacidad del modelo para clasificar correctamente los datos de prueba. 
 
-La tabla muestra que de las 234 instancias de la clase "Caras" en los datos de referencia, el modelo predijo correctamente 200 y se equivocó en 8 al predecir "Economicas" y en 34 al predecir "Intermedias". De las 309 instancias de la clase "Economicas", el modelo predijo correctamente 219, se equivocó en 20 al predecir "Caras" y en 70 al predecir "Intermedias". Finalmente, de las 33 instancias de la clase "Intermedias", el modelo predijo correctamente 14, se equivocó en 14 al predecir "Caras" y en 5 al predecir "Economicas".
+
+
+# 12 Repita los análisis usando random forest como algoritmo de predicción, explique sus resultados comparando ambos algoritmos
+
+```{r}
+
+# Cargar la librería de Random Forest
+library(randomForest)
+
+# Dividir los datos en conjuntos de entrenamiento y prueba
+set.seed(123)
+trainIndex <- createDataPartition(y = iris$Species, p = 0.8, list = FALSE)
+training <- iris[trainIndex, ]
+testing <- iris[-trainIndex, ]
+
+# Entrenar un modelo de Random Forest
+rf_model <- randomForest(Species ~ ., data = training)
+
+# Realizar predicciones en el conjunto de prueba
+rf_predictions <- predict(rf_model, testing)
+
+# Evaluar la precisión del modelo
+rf_accuracy <- mean(rf_predictions == testing$Species)
+rf_accuracy
+
+
+```
+
+En general, el algoritmo de Random Forest tiende a ser más preciso que el árbol de decisión, ya que utiliza múltiples árboles de decisión para hacer predicciones en lugar de uno solo. Además, Random Forest tiene la capacidad de manejar mejor los datos desequilibrados y los datos con múltiples variables correlacionadas. Sin embargo, el tiempo de entrenamiento y evaluación del modelo de Random Forest puede ser mayor que el del árbol de decisión, especialmente en conjuntos de datos más grandes.
+
+
